<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".show.ShowActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_season"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/ic_back_outline" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="255dp"
                android:orientation="vertical">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/poster_season"
                    android:layout_width="160dp"
                    android:layout_height="240dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout_season"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    android:layout_gravity="bottom"
                    app:tabIndicatorHeight="0dp" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


            <TextView
                android:id="@+id/title_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />


            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="8dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/subHeadingText"
                        android:text="@string/overview" />

                    <com.example.discover.utils.ExpandableTextView
                        android:id="@+id/overview_season"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                    <TextView
                        style="@style/subHeadingText"
                        android:text="@string/cast" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/cast_season"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/subHeadingText"
                        android:text="@string/crew" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/crew_season"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/subHeadingText"
                        android:text="@string/episodes" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/episode_season"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</LinearLayout>