<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_star_color"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/discover_header_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/posterCard"
                    android:layout_width="120dp"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawableStart="@drawable/ic_star_color"
                    app:layout_constraintBottom_toTopOf="@id/details"
                    app:layout_constraintStart_toEndOf="@id/posterCard"
                    app:layout_constraintTop_toTopOf="@id/posterCard" />

                <ImageButton
                    android:id="@+id/moreInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_info_"
                    app:layout_constraintBottom_toTopOf="@id/details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/posterCard" />

                <LinearLayout
                    android:id="@+id/details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/posterCard"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toEndOf="@id/posterCard"
                    app:layout_constraintTop_toBottomOf="@id/rating">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                style="@style/subHeadingText"
                android:text="@string/overview" />

            <com.example.discover.utils.ExpandableTextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp" />

<!--            <TextView-->
<!--                style="@style/subHeadingText"-->
<!--                android:text="@string/cast_and_crew" />-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cast_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subHeadingText"
                android:text="@string/genres" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/genresList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subHeadingText"
                android:text="@string/keywords" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/keywordsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subHeadingText"
                android:text="@string/recommendations" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subHeadingText"
                android:text="@string/similar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/subHeadingText"
                android:text="@string/Reviews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>