<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/backdrop_movie"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/frameLayout_title"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/posterCard"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="3dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/poster_movie"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/rating_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:drawableStart="@drawable/ic_tmdb"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/title_movie"
                        app:layout_constraintStart_toEndOf="@id/posterCard"
                        app:layout_constraintTop_toTopOf="@id/posterCard" />

                    <ImageButton
                        android:id="@+id/moreInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_info_"
                        app:layout_constraintBottom_toTopOf="@id/title_movie"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/rating_movie"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/title_movie"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toTopOf="@id/tagline_movie"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/posterCard"
                        app:layout_constraintTop_toBottomOf="@id/rating_movie" />

                    <TextView
                        android:id="@+id/tagline_movie"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toTopOf="@id/runtime_movie"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/posterCard"
                        app:layout_constraintTop_toBottomOf="@id/title_movie" />

                    <TextView
                        android:id="@+id/runtime_movie"
                        style="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        app:layout_constraintBottom_toBottomOf="@id/posterCard"
                        app:layout_constraintStart_toEndOf="@id/posterCard"
                        app:layout_constraintTop_toBottomOf="@id/tagline_movie"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/status_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        app:layout_constraintBottom_toBottomOf="@id/posterCard"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tagline_movie" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar_movie"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back_outline" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/overview" />

                <com.example.discover.utils.ExpandableTextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/crew" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/crew"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/genres" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/genresList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/keywords" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/keywordsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/recommendations" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/similar" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similarMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/subHeadingText"
                    android:text="@string/Reviews" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>